--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 Mathtugatuga is a simple web application that applies the basic concepts of electromagnetics
 
+Note: If a bug is found or if you have a question about the app, please to email me at gervelgiva@gmail.com
+
 v1.02 Released!
 Changelog:
 	- Added copy and paste feature. (Allows user to copy input/output vector and paste it in the input vector)
