--- a/README
+++ b/README
@@ -2,11 +2,17 @@ Mathtugatuga is a simple web application that applies the basic concepts of elec
 
 Note: If a bug is found or if you have a question about the app, please to email me at gervelgiva@gmail.com
 
-v1.02 Released!
 Changelog:
+
+v1.03 Released!
+	- Added a feature where users can reset an input vector
+	- Fixed bug for the decimal place of the output in vector algebra module
+	- Fixed bug where no output is displayed when an operation selected in vector algebra module
+
+v1.02 Released!
 	- Added copy and paste feature. (Allows user to copy input/output vector and paste it in the input vector)
 	- Removed component options, (Input Vector always have 3 components)
 
 
-A live version of the app can be found here [live version usese v.1.0]:
+A live version of the app can be found here [live version usese v1.03]:
 http://blackzky.byethost32.com/
