--- a/README
+++ b/README
@@ -14,5 +14,5 @@ v1.02 Released!
 	- Removed component options, (Input Vector always have 3 components)
 
 
-A live version of the app can be found here [live version usese v1.03]:
+A live version of the app can be found here [live version uses v1.03]:
 http://blackzky.byethost32.com/
